snapshots/aws_nlb_targets_ip/aws_configs/us-east-1/RouteTables.json
{
 "RouteTables": [
  {
   "Associations": [
    {
     "AssociationState": {
      "State": "associated"
     },
     "Main": true,
     "RouteTableAssociationId": "rtbassoc-0211491179b180441",
     "RouteTableId": "rtb-0fae86121c8f1f060"
    }
   ],
   "OwnerId": "028403472736",
   "PropagatingVgws": [],
   "RouteTableId": "rtb-0fae86121c8f1f060",
   "Routes": [
    {
     "DestinationCidrBlock": "10.2.0.0/16",
     "GatewayId": "local",
     "Origin": "CreateRouteTable",
     "State": "active"
    }
   ],
   "Tags": [],
   "VpcId": "vpc-016124ea7f52d5b1d"
  },
  {
   "Associations": [
    {
     "AssociationState": {
      "State": "associated"
     },
     "Main": false,
     "RouteTableAssociationId": "rtbassoc-09937ec9a07674a15",
     "RouteTableId": "rtb-0bb8c3a1fc68041db",
     "SubnetId": "subnet-042d220eb822fe751"
    }
   ],
   "OwnerId": "028403472736",
   "PropagatingVgws": [],
   "RouteTableId": "rtb-0bb8c3a1fc68041db",
   "Routes": [
    {
     "DestinationCidrBlock": "10.1.0.0/16",
     "GatewayId": "local",
     "Origin": "CreateRouteTable",
     "State": "active"
    },
    {
     "DestinationCidrBlock": "10.2.0.0/16",
     "Origin": "CreateRoute",
     "State": "active",
     "VpcPeeringConnectionId": "pcx-066ddd8b89d1552ac"
    },
    {
     "DestinationCidrBlock": "0.0.0.0/0",
     "GatewayId": "igw-0f7c73e5d6edcdc74",
     "Origin": "CreateRoute",
     "State": "active"
    }
   ],
   "Tags": [
    {
     "Key": "Name",
     "Value": "jump_rtb_igw"
    }
   ],
   "VpcId": "vpc-0f068bca92fc17694"
  },
  {
   "Associations": [
    {
     "AssociationState": {
      "State": "associated"
     },
     "Main": true,
     "RouteTableAssociationId": "rtbassoc-0f90becb6ae8a55bc",
     "RouteTableId": "rtb-00ec3a67da7d97fb3"
    }
   ],
   "OwnerId": "028403472736",
   "PropagatingVgws": [],
   "RouteTableId": "rtb-00ec3a67da7d97fb3",
   "Routes": [
    {
     "DestinationCidrBlock": "10.1.0.0/16",
     "GatewayId": "local",
     "Origin": "CreateRouteTable",
     "State": "active"
    }
   ],
   "Tags": [],
   "VpcId": "vpc-0f068bca92fc17694"
  },
  {
   "Associations": [
    {
     "AssociationState": {
      "State": "associated"
     },
     "Main": false,
     "RouteTableAssociationId": "rtbassoc-09a42f7f529f13fc8",
     "RouteTableId": "rtb-06baadd7f5c3c09c4",
     "SubnetId": "subnet-028e436142276c4bb"
    }
   ],
   "OwnerId": "028403472736",
   "PropagatingVgws": [],
   "RouteTableId": "rtb-06baadd7f5c3c09c4",
   "Routes": [
    {
     "DestinationCidrBlock": "10.1.0.0/16",
     "Origin": "CreateRoute",
     "State": "active",
     "VpcPeeringConnectionId": "pcx-066ddd8b89d1552ac"
    },
    {
     "DestinationCidrBlock": "10.2.0.0/16",
     "GatewayId": "local",
     "Origin": "CreateRouteTable",
     "State": "active"
    },
    {
     "DestinationCidrBlock": "0.0.0.0/0",
     "NatGatewayId": "nat-06826c381f3bb3106",
     "Origin": "CreateRoute",
     "State": "active"
    }
   ],
   "Tags": [],
   "VpcId": "vpc-016124ea7f52d5b1d"
  },
  {
   "Associations": [
    {
     "AssociationState": {
      "State": "associated"
     },
     "Main": false,
     "RouteTableAssociationId": "rtbassoc-09f09af173b3ce68f",
     "RouteTableId": "rtb-0a08a76f6dc9f1372",
     "SubnetId": "subnet-04d15cce6679834e2"
    }
   ],
   "OwnerId": "028403472736",
   "PropagatingVgws": [],
   "RouteTableId": "rtb-0a08a76f6dc9f1372",
   "Routes": [
    {
     "DestinationCidrBlock": "10.2.0.0/16",
     "GatewayId": "local",
     "Origin": "CreateRouteTable",
     "State": "active"
    },
    {
     "DestinationCidrBlock": "0.0.0.0/0",
     "GatewayId": "igw-036c1523e9811b4ac",
     "Origin": "CreateRoute",
     "State": "active"
    }
   ],
   "Tags": [
    {
     "Key": "Name",
     "Value": "targets_ip_rtb_igw"
    }
   ],
   "VpcId": "vpc-016124ea7f52d5b1d"
  }
 ]
}
