snapshots/aws_nlb_targets_ip/aws_configs/us-east-1/SecurityGroups.json
{
 "SecurityGroups": [
  {
   "Description": "Managed by Terraform",
   "GroupId": "sg-028d15222676e8ef8",
   "GroupName": "sg_targets_ip_pe_pri_a",
   "IpPermissions": [
    {
     "FromPort": 80,
     "IpProtocol": "tcp",
     "IpRanges": [
      {
       "CidrIp": "10.2.1.88/32",
       "Description": "HTTP Access"
      }
     ],
     "Ipv6Ranges": [],
     "PrefixListIds": [],
     "ToPort": 80,
     "UserIdGroupPairs": []
    },
    {
     "FromPort": 33434,
     "IpProtocol": "udp",
     "IpRanges": [
      {
       "CidrIp": "0.0.0.0/0",
       "Description": "Traceroute Access"
      }
     ],
     "Ipv6Ranges": [],
     "PrefixListIds": [],
     "ToPort": 33534,
     "UserIdGroupPairs": []
    },
    {
     "FromPort": 22,
     "IpProtocol": "tcp",
     "IpRanges": [
      {
       "CidrIp": "0.0.0.0/0",
       "Description": "SSH Access"
      }
     ],
     "Ipv6Ranges": [],
     "PrefixListIds": [],
     "ToPort": 22,
     "UserIdGroupPairs": []
    },
    {
     "FromPort": 8,
     "IpProtocol": "icmp",
     "IpRanges": [
      {
       "CidrIp": "10.1.1.100/32",
       "Description": "ICMP Echo Request Access"
      }
     ],
     "Ipv6Ranges": [],
     "PrefixListIds": [],
     "ToPort": 0,
     "UserIdGroupPairs": []
    }
   ],
   "IpPermissionsEgress": [
    {
     "IpProtocol": "-1",
     "IpRanges": [
      {
       "CidrIp": "0.0.0.0/0",
       "Description": "Allow all"
      }
     ],
     "Ipv6Ranges": [],
     "PrefixListIds": [],
     "UserIdGroupPairs": []
    }
   ],
   "OwnerId": "028403472736",
   "Tags": [
    {
     "Key": "Name",
     "Value": "targets_ip_general"
    }
   ],
   "VpcId": "vpc-016124ea7f52d5b1d"
  },
  {
   "Description": "default VPC security group",
   "GroupId": "sg-0645d83faf036eaaa",
   "GroupName": "default",
   "IpPermissions": [
    {
     "IpProtocol": "-1",
     "IpRanges": [],
     "Ipv6Ranges": [],
     "PrefixListIds": [],
     "UserIdGroupPairs": [
      {
       "GroupId": "sg-0645d83faf036eaaa",
       "UserId": "028403472736"
      }
     ]
    }
   ],
   "IpPermissionsEgress": [
    {
     "IpProtocol": "-1",
     "IpRanges": [
      {
       "CidrIp": "0.0.0.0/0"
      }
     ],
     "Ipv6Ranges": [],
     "PrefixListIds": [],
     "UserIdGroupPairs": []
    }
   ],
   "OwnerId": "028403472736",
   "VpcId": "vpc-016124ea7f52d5b1d"
  },
  {
   "Description": "Managed by Terraform",
   "GroupId": "sg-084773290be2f9ddd",
   "GroupName": "jump_sg_general",
   "IpPermissions": [
    {
     "FromPort": 33434,
     "IpProtocol": "udp",
     "IpRanges": [
      {
       "CidrIp": "0.0.0.0/0",
       "Description": "Traceroute Access"
      }
     ],
     "Ipv6Ranges": [],
     "PrefixListIds": [],
     "ToPort": 33534,
     "UserIdGroupPairs": []
    },
    {
     "FromPort": 22,
     "IpProtocol": "tcp",
     "IpRanges": [
      {
       "CidrIp": "0.0.0.0/0",
       "Description": "SSH Access"
      }
     ],
     "Ipv6Ranges": [],
     "PrefixListIds": [],
     "ToPort": 22,
     "UserIdGroupPairs": []
    },
    {
     "FromPort": 8,
     "IpProtocol": "icmp",
     "IpRanges": [
      {
       "CidrIp": "10.4.1.100/32",
       "Description": "ICMP Echo Request Access"
      }
     ],
     "Ipv6Ranges": [],
     "PrefixListIds": [],
     "ToPort": 0,
     "UserIdGroupPairs": []
    }
   ],
   "IpPermissionsEgress": [
    {
     "IpProtocol": "-1",
     "IpRanges": [
      {
       "CidrIp": "0.0.0.0/0",
       "Description": "Allow all"
      }
     ],
     "Ipv6Ranges": [],
     "PrefixListIds": [],
     "UserIdGroupPairs": []
    }
   ],
   "OwnerId": "028403472736",
   "Tags": [
    {
     "Key": "Name",
     "Value": "jump_general"
    }
   ],
   "VpcId": "vpc-0f068bca92fc17694"
  },
  {
   "Description": "Managed by Terraform",
   "GroupId": "sg-08c47fe4106546724",
   "GroupName": "sg_targets_ip_pe_pub_a",
   "IpPermissions": [
    {
     "FromPort": 80,
     "IpProtocol": "tcp",
     "IpRanges": [
      {
       "CidrIp": "8.8.8.8/32",
       "Description": "HTTP Access"
      },
      {
       "CidrIp": "67.160.71.197/32",
       "Description": "HTTP Access"
      }
     ],
     "Ipv6Ranges": [],
     "PrefixListIds": [],
     "ToPort": 80,
     "UserIdGroupPairs": []
    },
    {
     "FromPort": 33434,
     "IpProtocol": "udp",
     "IpRanges": [
      {
       "CidrIp": "0.0.0.0/0",
       "Description": "Traceroute Access"
      }
     ],
     "Ipv6Ranges": [],
     "PrefixListIds": [],
     "ToPort": 33534,
     "UserIdGroupPairs": []
    },
    {
     "FromPort": 22,
     "IpProtocol": "tcp",
     "IpRanges": [
      {
       "CidrIp": "0.0.0.0/0",
       "Description": "SSH Access"
      }
     ],
     "Ipv6Ranges": [],
     "PrefixListIds": [],
     "ToPort": 22,
     "UserIdGroupPairs": []
    },
    {
     "FromPort": 8,
     "IpProtocol": "icmp",
     "IpRanges": [
      {
       "CidrIp": "10.1.1.100/32",
       "Description": "ICMP Echo Request Access"
      }
     ],
     "Ipv6Ranges": [],
     "PrefixListIds": [],
     "ToPort": 0,
     "UserIdGroupPairs": []
    }
   ],
   "IpPermissionsEgress": [
    {
     "IpProtocol": "-1",
     "IpRanges": [
      {
       "CidrIp": "0.0.0.0/0",
       "Description": "Allow all"
      }
     ],
     "Ipv6Ranges": [],
     "PrefixListIds": [],
     "UserIdGroupPairs": []
    }
   ],
   "OwnerId": "028403472736",
   "Tags": [
    {
     "Key": "Name",
     "Value": "targets_ip_general"
    }
   ],
   "VpcId": "vpc-016124ea7f52d5b1d"
  },
  {
   "Description": "default VPC security group",
   "GroupId": "sg-08ed9f6fc861b0f02",
   "GroupName": "default",
   "IpPermissions": [
    {
     "IpProtocol": "-1",
     "IpRanges": [],
     "Ipv6Ranges": [],
     "PrefixListIds": [],
     "UserIdGroupPairs": [
      {
       "GroupId": "sg-08ed9f6fc861b0f02",
       "UserId": "028403472736"
      }
     ]
    }
   ],
   "IpPermissionsEgress": [
    {
     "IpProtocol": "-1",
     "IpRanges": [
      {
       "CidrIp": "0.0.0.0/0"
      }
     ],
     "Ipv6Ranges": [],
     "PrefixListIds": [],
     "UserIdGroupPairs": []
    }
   ],
   "OwnerId": "028403472736",
   "VpcId": "vpc-0f068bca92fc17694"
  },
  {
   "Description": "Managed by Terraform",
   "GroupId": "sg-0b61b37b346ff2038",
   "GroupName": "sg_targets_ip_pd_pri_a",
   "IpPermissions": [
    {
     "FromPort": 80,
     "IpProtocol": "tcp",
     "IpRanges": [
      {
       "CidrIp": "10.2.1.194/32",
       "Description": "HTTP Access"
      }
     ],
     "Ipv6Ranges": [],
     "PrefixListIds": [],
     "ToPort": 80,
     "UserIdGroupPairs": []
    },
    {
     "FromPort": 33434,
     "IpProtocol": "udp",
     "IpRanges": [
      {
       "CidrIp": "0.0.0.0/0",
       "Description": "Traceroute Access"
      }
     ],
     "Ipv6Ranges": [],
     "PrefixListIds": [],
     "ToPort": 33534,
     "UserIdGroupPairs": []
    },
    {
     "FromPort": 22,
     "IpProtocol": "tcp",
     "IpRanges": [
      {
       "CidrIp": "0.0.0.0/0",
       "Description": "SSH Access"
      }
     ],
     "Ipv6Ranges": [],
     "PrefixListIds": [],
     "ToPort": 22,
     "UserIdGroupPairs": []
    },
    {
     "FromPort": 8,
     "IpProtocol": "icmp",
     "IpRanges": [
      {
       "CidrIp": "10.1.1.100/32",
       "Description": "ICMP Echo Request Access"
      }
     ],
     "Ipv6Ranges": [],
     "PrefixListIds": [],
     "ToPort": 0,
     "UserIdGroupPairs": []
    }
   ],
   "IpPermissionsEgress": [
    {
     "IpProtocol": "-1",
     "IpRanges": [
      {
       "CidrIp": "0.0.0.0/0",
       "Description": "Allow all"
      }
     ],
     "Ipv6Ranges": [],
     "PrefixListIds": [],
     "UserIdGroupPairs": []
    }
   ],
   "OwnerId": "028403472736",
   "Tags": [
    {
     "Key": "Name",
     "Value": "targets_ip_general"
    }
   ],
   "VpcId": "vpc-016124ea7f52d5b1d"
  },
  {
   "Description": "Managed by Terraform",
   "GroupId": "sg-0dd72aded641a8130",
   "GroupName": "sg_targets_ip_pd_pub_a",
   "IpPermissions": [
    {
     "FromPort": 80,
     "IpProtocol": "tcp",
     "IpRanges": [
      {
       "CidrIp": "8.8.8.8/32",
       "Description": "HTTP Access"
      },
      {
       "CidrIp": "67.160.71.197/32",
       "Description": "HTTP Access"
      }
     ],
     "Ipv6Ranges": [],
     "PrefixListIds": [],
     "ToPort": 80,
     "UserIdGroupPairs": []
    },
    {
     "FromPort": 33434,
     "IpProtocol": "udp",
     "IpRanges": [
      {
       "CidrIp": "0.0.0.0/0",
       "Description": "Traceroute Access"
      }
     ],
     "Ipv6Ranges": [],
     "PrefixListIds": [],
     "ToPort": 33534,
     "UserIdGroupPairs": []
    },
    {
     "FromPort": 22,
     "IpProtocol": "tcp",
     "IpRanges": [
      {
       "CidrIp": "0.0.0.0/0",
       "Description": "SSH Access"
      }
     ],
     "Ipv6Ranges": [],
     "PrefixListIds": [],
     "ToPort": 22,
     "UserIdGroupPairs": []
    },
    {
     "FromPort": 8,
     "IpProtocol": "icmp",
     "IpRanges": [
      {
       "CidrIp": "10.1.1.100/32",
       "Description": "ICMP Echo Request Access"
      }
     ],
     "Ipv6Ranges": [],
     "PrefixListIds": [],
     "ToPort": 0,
     "UserIdGroupPairs": []
    }
   ],
   "IpPermissionsEgress": [
    {
     "IpProtocol": "-1",
     "IpRanges": [
      {
       "CidrIp": "0.0.0.0/0",
       "Description": "Allow all"
      }
     ],
     "Ipv6Ranges": [],
     "PrefixListIds": [],
     "UserIdGroupPairs": []
    }
   ],
   "OwnerId": "028403472736",
   "Tags": [
    {
     "Key": "Name",
     "Value": "targets_ip_general"
    }
   ],
   "VpcId": "vpc-016124ea7f52d5b1d"
  }
 ]
}
